--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 spring.thymeleaf.cache=false
+
+spring.profiles.include=security
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show_sql = true
